[workspace]
members = ["leader", "worker", "common", "ops", "verifier", "rpc", "prover"]
resolver = "2"

[workspace.dependencies]
paladin-core = "0.4.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.183"
proof_gen = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "brendans_testing_branch" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "brendans_testing_branch" }
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "brendans_testing_branch" }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "7445ec911b0c5a1d94062ef2d5cae4ec08ee9a3f" }
serde_path_to_error = "0.1.14"
serde_json = "1.0.107"
ethereum-types = "0.14.1"
thiserror = "1.0.50"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPolygonZero/zero-bin"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography::cryptocurrencies"]

[profile.release]
opt-level = 3
incremental = true
lto = "fat"
codegen-units = 1
