[workspace]
members = ["leader", "worker", "common", "ops", "verifier", "rpc", "prover"]
resolver = "2"

[workspace.dependencies]
paladin-core = "0.4.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.183"
serde_path_to_error = "0.1.14"
serde_json = "1.0.107"
ethereum-types = "0.14.1"
thiserror = "1.0.50"
futures = "0.3.29"

# zk-evm dependencies
plonky2 = "0.2.0"
evm_arithmetization = { path = "../zk_evm/evm_arithmetization" }
trace_decoder = { path = "../zk_evm/trace_decoder" }
proof_gen = { path = "../zk_evm/proof_gen" }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPolygonZero/zero-bin"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography::cryptocurrencies"]

# [profile.release]
# opt-level = 3
# incremental = true
# lto = "fat"
# codegen-units = 1
